2013-10-19  David Van Horn
	    Per Bothner  <per@bothner.com>

	* RAPair.java: Port to Java of low-level class definition and methods
	from  SRFI-101 "Purely Functional Random-Access Pairs and Lists"
	reference implementation.
	* Makefile.am: Update accordingly.

2013-09-20  Per Bothner  <per@bothner.com>

	* Consumer.java: If JAVA8 implement java.util.function.Consumer and
	java.util.function.PInt,Long,Double}Consumer.
	* SimpleVector.java (forEach): New method (optimization) if JAVA8.

2013-09-15  Per Bothner  <per@bothner.com>

	* StableVector.java (adjustPositions): Fix off-by-one calculations.

	* CharBuffer.java (dump): Adjust for gap size when printing positions.

2013-09-03  Per Bothner  <per@bothner.com>

	* PrintConsumer.java (write): The write method is supposed to
	take a (start,length)-pair, not a (start,end)-pair.
	(append): Update call to write.

2013-08-31  Per Bothner  <per@bothner.com>

	* Strings.java (copyInfo): Fix off-by-one error.

2013-08-25  Per Bothner  <per@bothner.com>

	* FString.java: Some simplication of constructors that copy a
	CharSequence.

	* Strings.java (copyInto): New static method, used by string-copy!.

2013-05-11  Per Bothner  <per@bothner.com>

	* PrintConsumer.java (write): If range is empty, write empty String.
	Thus delimiter actions done for any string get done.
	(append): Don't use loop - use above version of write instead.

2013-03-04  Per Bothner  <per@bothner.com>

	* Strings.java (printQuoted): Generalize to Appendable.

2013-02-14  Per Bothner  <per@bothner.com>

	* Pair.java: Use getCar()/getCdr() instead of accessinging car/cdr
	fields directly - which may not work for for subclasses.
	* ImmutablePair.java (<init>): Call super constructor.

2012-11-29  Per Bothner  <per@bothner.com>

	* U8Vector.java (toUtf): Add (start,length) parameters.
	* ByteVector.java (copyFrom): New method.

	* FVector.java (copyFrom): New method.

2012-11-28  Per Bothner  <per@bothner.com>
